<resources>
    <string name="app_name">GUNBAKER GAME</string>

    <!-- Main Activity-->
    <string name="playNow">PLAY NOW</string>
    <string name="logout">LOGOUT</string>
    <!-- Login Activity   -->
    <string name="login">LOGIN</string>
    <string name="hintNameFormLogin">Your Name</string>
    <string name="hintPasswordFormLogin">Your Password</string>
    <string name="dontHaveAccount">If you do not have account, please register</string>
    <string name="loginButton">Login</string>
    <string name="here">here</string>
    <string name="hiUser">Hi %1$s</string>

    <!-- Register Activity  -->
    <string name="registration">REGISTRATION</string>
    <string name="hintNameFormRegistration">Your Name</string>
    <string name="hintPasswordFormRegistration">Your Password</string>
    <string name="hintConfirmationPasswordFormRegistration">Your Confirmation Password</string>
    <string name="haveRegistered">If you have registered, please login</string>
    <string name="registerButton">Register</string>

    <!-- Choosing Activity  -->
    <string name="choosing">Make your choice</string>


    <!-- Scoring Activity -->
    <string name="match">MATCH</string>
    <string name="your_option">Your Option</string>
    <string name="computer">Computer</string>
    <string name="your_score">Your Score : %1$s</string>
    <string name="best_score">Best Score : %1$s</string>
    <string name="final_score">Final Score : %1$s</string>
    <string name="play_again">Play Again</string>
    <string name="restart">Restart</string>
    <string name="exit">Exit</string>
    <string name="resultGameMessage1">YOU ARE %1$s !! </string>
    <string name="resultGameMessage2">THE MATCH IS %1$s !!</string>

    <!-- Rule Game Activity  -->
    <string name="rule1">Select the number of game rounds</string>
    <string name="start_now">Start Now</string>


</resources>