<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="24dp">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginVertical="35dp"
        android:text="@string/registration"
        android:textColor="@color/blueSky"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginBottom="50dp"
        android:src="@drawable/person" />


    <EditText
        android:id="@+id/editTextNameUser"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/custom_edittext"
        android:drawableLeft="@drawable/ic_baseline_person_24"
        android:ems="10"
        android:hint="@string/hintNameFormRegistration"
        android:inputType="textPersonName"
        android:paddingLeft="15dp" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/custom_edittext"
        android:drawableLeft="@drawable/ic_baseline_lock_24"
        android:ems="10"
        android:hint="@string/hintPasswordFormRegistration"
        android:inputType="textPassword"
        android:paddingLeft="15dp" />

    <EditText
        android:id="@+id/editTextConfirmationPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/custom_edittext"
        android:drawableLeft="@drawable/ic_baseline_lock_24"
        android:ems="10"
        android:hint="@string/hintConfirmationPasswordFormRegistration"
        android:inputType="textPassword"
        android:paddingLeft="15dp"
        />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginVertical="20dp"
        android:backgroundTint="@color/blueSky"
        android:text="@string/registerButton" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/haveRegistered" />

        <TextView
            android:id="@+id/pleaseLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:text="@string/here"
            android:textColor="@color/blueSky" />

    </LinearLayout>
</LinearLayout>