<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginVertical="50dp"
        android:text="@string/login"
        android:textColor="@color/blueSky"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginBottom="80dp"
        android:src="@drawable/person" />

    <EditText
        android:id="@+id/editTextNameUser"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/custom_edittext"
        android:drawableLeft="@drawable/ic_baseline_person_24"
        android:ems="10"
        android:hint="@string/hintNameFormLogin"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:visibility="visible" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/custom_edittext"
        android:drawableLeft="@drawable/ic_baseline_lock_24"
        android:ems="10"
        android:hint="@string/hintPasswordFormLogin"
        android:inputType="textPassword"
        android:paddingLeft="15dp" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginVertical="20dp"
        android:backgroundTint="@color/blueSky"
        android:text="@string/loginButton" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dontHaveAccount" />

        <TextView
            android:id="@+id/pleaseRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:text="@string/here"
            android:textColor="@color/blueSky" />


    </LinearLayout>


</LinearLayout>