<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/app_name"
        android:textSize="22sp"
        android:fontFamily="sans-serif-light"
        android:textStyle="bold"
        android:textColor="@color/blueSky"
        />

    <ImageView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/logo"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"/>
    <TextView
        android:id="@+id/greetingUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/hiUser"/>


    <Button
        android:id="@+id/playNowButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/playNow"
        android:backgroundTint="@color/blueSky"
        />
    <Button
        android:id="@+id/logoutButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/logout"
        android:backgroundTint="@color/blueSky"/>




</LinearLayout>