<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical">

    <TextView
        android:id="@+id/matchTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/match"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginVertical="15dp"/>
    <LinearLayout
        android:id="@+id/activityScoringLinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="15dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal">
            <ImageView
                android:id="@+id/playerFingerImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/question_mark"
                android:maxWidth="150dp"
                android:maxHeight="150dp"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_option"
                android:layout_gravity="center_horizontal"

                />

        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="VS"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal">
             <ImageView
                android:id="@+id/computerFingerImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/question_mark"
                android:maxWidth="150dp"
                android:maxHeight="150dp"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/computer"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:id="@+id/resultMessageTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/resultGameMessage1"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginVertical="15dp"/>
    <ImageView
        android:id="@+id/resultImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/question_mark"
        android:maxWidth="200dp"
        android:maxHeight="200dp"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"/>

    <TextView
        android:id="@+id/bestScoreTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginVertical="15dp"
        android:text="@string/best_score"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/scoreTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginVertical="15dp"
        android:text="@string/your_score"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/playAgainButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/play_again"
        android:backgroundTint="@color/blueSky"/>
    <Button
        android:id="@+id/exitButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/exit"
        android:backgroundTint="@color/blueSky"
        />


</LinearLayout>